--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .gradle
-application.properties
+src/main/resources/application.properties
 /build/
 !gradle/wrapper/gradle-wrapper.jar
 
@@ -24,3 +24,5 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+out/
